# Bowire.Templates

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Kuestenlogik.Bowire.Templates.csproj  Kuestenlogik.Bowire.Templates.slnx  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  build.ps1  nuget.config
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: add-to-project.yml  auto-tag-on-bowire-merge.yml  bowire-released.yml  ci.yml  release.yml
docs/: BowirePluginTemplate.md
scripts/: bumpVersion.ps1  getReleaseNotes.ps1  install-dev-templates.ps1  test-templates.ps1
src/bowire-cli-cmd/: MyCommand.cs
src/bowire-cli-cmd/.template.config/: template.json
src/bowire-mock-emit/: MyMockEmitter.cs
src/bowire-mock-emit/.template.config/: template.json
src/bowire-plugin/: .editorconfig  .gitignore  Bowire.Plugin1.slnx  Directory.Build.props  Directory.Packages.props  README.md
src/bowire-plugin/.github/workflows/: ci.yml
src/bowire-plugin/.template.config/: ide.host.json  template.json
src/bowire-plugin/sidecar-go/: .gitignore  README.md  go.mod.tpl  main.go  main_test.go  sidecar.json
src/bowire-plugin/sidecar-node/: .gitignore  README.md  package.json  sidecar.json  tsconfig.json
src/bowire-plugin/sidecar-node/src/: index.ts  plugin.ts
src/bowire-plugin/sidecar-node/tests/: plugin.test.ts
src/bowire-plugin/sidecar-python/: .gitignore  README.md  pyproject.toml  sidecar.json
src/bowire-plugin/sidecar-python/src/MY_PYTHON_PACKAGE_NAME/: __init__.py  __main__.py  plugin.py
src/bowire-plugin/sidecar-python/tests/: test_plugin.py
src/bowire-plugin/sidecar-rust/: .gitignore  Cargo.toml  README.md  sidecar.json
src/bowire-plugin/sidecar-rust/src/: main.rs
src/bowire-plugin/src/Bowire.Plugin1/: Bowire.Plugin1.csproj  MyProtocol.cs  MyProtocolChannel.cs
src/bowire-plugin/tests/Bowire.Plugin1.IntegrationTests/: Bowire.Plugin1.IntegrationTests.csproj  PluginIntegrationTests.cs
(+2 files in other folders)
